AC_INIT([LPMLN],1.0)
AM_INIT_AUTOMAKE([subdir-objects])
CC=${CC-/usr/bin/g++-4.8}
CXXFLAGS="$CXXFLAGS -g -std=c++11 -Wall -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef  -Wno-unused"
AC_SUBST([PROJECT_ROOT],`pwd`)
AC_PROG_CXX([g++])
AC_PROG_CC
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
